--- a/.github/workflows/oop.yml
+++ b/.github/workflows/oop.yml
@@ -5,21 +5,21 @@ name: CI
 # Controls when the workflow will run
 on:
   pull_request:
-    branches: [ "master" ]  
+    branches: [ "main" ]
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./${{ github.event.pull_request.title }}
     steps:
       - uses: actions/checkout@v3
-      
+
+      - name: chmod
+        run: chmod +x gradlew
+
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
-    
+
       - name: Execute Gradle build
         run: ./gradlew build
 
