--- a/Task_1_2_1/build.gradle
+++ b/Task_1_2_1/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'jacoco'
 }
 
 group 'ru.nsu.fit.oop.veber'
@@ -14,6 +15,13 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
+jacocoTestReport {
+    reports {
+        xml.required = true
+    }
+}
+
 test {
+    dependsOn test
     useJUnitPlatform()
 }
