Still tries to run workflow

--- a/Task_1_2_1/build.gradle
+++ b/Task_1_2_1/build.gradle
@@ -16,12 +16,13 @@ dependencies {
 }
 
 jacocoTestReport {
+    dependsOn test
     reports {
         xml.required = true
     }
 }
 
 test {
-    dependsOn test
     useJUnitPlatform()
+    finalizedBy jacocoTestReport
 }
