--- a/.github/workflows/oop.yml
+++ b/.github/workflows/oop.yml
@@ -1,7 +1,5 @@
 # This is a basic workflow to help you get started with Actions
-
 name: CI
-
 # Controls when the workflow will run
 on:
   pull_request:
@@ -14,25 +12,16 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
 
-
-      - name: chmod gradlew
+      - name: chmod
         run: chmod +x gradlew
 
-
       - name: Execute Gradle build
-        run: ./gradlew ${{ github.event.pull_request.title }}:build
-
-
+        run: ./gradlew build
       - name: Generate Jacoco report
         run: ./gradlew jacocoTestReport
-
-      - name: directory tree
-        run: tree
-
       - name: Check coverage and publish
         id: jacoco
         uses: madrapps/jacoco-report@v1.2
@@ -41,14 +30,8 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           min-coverage-overall: 80
           min-coverage-changed-files: 80
-
-
       - name: Generate javadoc
-        run: ./gradlew ${{ github.event.pull_request.title }}:javadoc
-
-      - name: directory tree
-        run: tree
-
+        run: ./gradlew javadoc
       - name: Publish javadoc
         uses: JamesIves/github-pages-deploy-action@v4
         with:
@@ -56,15 +39,12 @@ jobs:
           branch: gh-pages
           clean: true
           folder: ${{ github.event.pull_request.title }}/build/docs/javadoc
-          # Если джавадоки не там, то можете поменять директорию выше, опираясь на дерево выше
           target-folder: ${{ github.event.pull_request.title }}
-
   checkstyle:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
       - name: Run check style
         uses: nikitasavinov/checkstyle-action@master
         with:
