change resize method

--- a/Task_1_2_1/build.gradle
+++ b/Task_1_2_1/build.gradle
@@ -24,5 +24,7 @@ jacocoTestReport {
     dependsOn test
     reports {
         xml.required = true
+        csv.required = false
+        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
     }
 }
