--- a/Task_1_3_1/build.gradle
+++ b/Task_1_3_1/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'jacoco'
 }
 
 group 'ru.nsu.fit.oop'
@@ -15,4 +16,14 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    finalizeBy jacocoTestReport
+}
+
+jacocoTestReport {
+    dependsOn test
+    reports {
+        xml.required = true
+        csv.required = false
+        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+    }
 }
