--- a/Task_1_4_1/build.gradle
+++ b/Task_1_4_1/build.gradle
@@ -1,8 +1,9 @@
 plugins {
     id 'java'
+    id 'jacoco'
 }
 
-group 'org.example'
+group 'ru.nsu.fit.oop.veber'
 version 'unspecified'
 
 repositories {
@@ -16,4 +17,13 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    finalizedBy jacocoTestReport
+}
+jacocoTestReport {
+    dependsOn test
+    reports {
+        xml.required = true
+        csv.required = false
+        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+    }
 }
