--- a/Task_1_5_1/build.gradle
+++ b/Task_1_5_1/build.gradle
@@ -27,3 +27,9 @@ jacocoTestReport {
         html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
     }
 }
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
