--- a/Task_1_5_2/build.gradle
+++ b/Task_1_5_2/build.gradle
@@ -26,3 +26,12 @@ java {
         languageVersion.set(JavaLanguageVersion.of(17))
     }
 }
+
+jacocoTestReport {
+    dependsOn test
+    reports {
+        xml.required = true
+        csv.required = false
+        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+    }
+}
