--- a/Task_1_5_1/build.gradle
+++ b/Task_1_5_1/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.0'
+    implementation 'org.apache.commons:commons-numbers-complex:1.1'
 }
 
 test {
