--- a/Task_2_1_1/build.gradle
+++ b/Task_2_1_1/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
 group 'ru.nsu.fit.oop.veber'
@@ -19,4 +20,10 @@ dependencies {
 
 test {
     useJUnitPlatform()
+
+}
+jar {
+    manifest {
+        attributes 'Main-Class': 'ru.nsu.fit.oop.veber.BenchmarkRunner'
+    }
 }
