--- a/.github/workflows/jmh.yml
+++ b/.github/workflows/jmh.yml
@@ -19,6 +19,13 @@ jobs:
         with:
           distribution: "adopt"
           java-version: "11"
+
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+
+      - name: chmod
+        run: chmod +x gradlew
+
       - name: Run benchmark
         run: |
           ./gradlew :Task_2_1_1:shadowJar
