--- a/.github/workflows/jmh.yml
+++ b/.github/workflows/jmh.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           name: JMH Benchmark
           tool: "jmh"
-          output-file-path: ./Task_2_1_1/jmh-result.json
+          output-file-path: ./target/jmh-reports/result.json
           # Use personal access token instead of GITHUB_TOKEN due to https://github.community/t/github-action-not-triggering-gh-pages-upon-push/16096
           github-token: ${{ secrets.GITHUB_TOKEN }}
           auto-push: true
@@ -51,7 +51,7 @@ jobs:
         with:
           name: JMH Benchmark
           tool: "jmh"
-          output-file-path: ./Task_2_1_1/jmh-result.json
+          output-file-path: ./target/jmh-reports/result.json
           # Use personal access token instead of GITHUB_TOKEN due to https://github.community/t/github-action-not-triggering-gh-pages-upon-push/16096
           github-token: ${{ secrets.BENCHMARK_ACTION_BOT_TOKEN }}
           auto-push: true
