--- a/.github/workflows/jmh.yml
+++ b/.github/workflows/jmh.yml
@@ -57,4 +57,4 @@ jobs:
           comment-on-alert: true
           fail-on-alert: true
           alert-comment-cc-users: "@michaelmior"
-          gh-repository: "github.com/Fagorym/OOPs"
+          gh-repository: "github.com/Fagorym/OOP"
