change java version

--- a/Task_2_1_1/build.gradle
+++ b/Task_2_1_1/build.gradle
@@ -29,6 +29,12 @@ jar {
     }
 }
 
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(17))
+    }
+}
+
 jacocoTestReport {
     dependsOn test
     reports {
