exclude Main from tests

--- a/Task_2_2_1/build.gradle
+++ b/Task_2_2_1/build.gradle
@@ -40,7 +40,7 @@ jacocoTestReport {
         classDirectories.setFrom(files(classDirectories.files.collect {
             fileTree(
                     dir: it,
-                    exclude: 'ru.nsu.fit.veber.Main')
+                    exclude: '**/Main.*')
         }
         )
         )
