create config properties

--- a/Task_2_3_1/src/main/resources/config.properties
+++ b/Task_2_3_1/src/main/resources/config.properties
@@ -1,4 +1,9 @@
-GAME_BOX_LENGTH=20
-GAME_BOX_HEIGHT=30
-SNAKE_START_COORDINATE_X=5
-SNAKE_START_COORDINATE_Y=3
+GRAPHIC_SCREEN_LENGTH=1000
+GRAPHIC_SCREEN_HEIGHT=1000
+CONSOLE_SCREEN_LENGTH=500
+CONSOLE_SCREEN_HEIGHT=500
+FOOD_COUNT=1
+FOOD_INITIAL_COORDINATE_X=1
+FOOD_INITIAL_COORDINATE_Y=1
+SNAKE_INITIAL_COORDINATE_X=10
+SNAKE_INITIAL_COORDINATE_Y=10
