--- a/Task_2_3_1/build.gradle
+++ b/Task_2_3_1/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation('org.kordamp.ikonli:ikonli-javafx:12.3.1')
     implementation('org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0')
     implementation('com.googlecode.lanterna:lanterna:3.2.0-alpha1')
+    implementation('com.google.code.gson:gson:2.10.1')
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
