change java version

--- a/Task_2_3_1/build.gradle
+++ b/Task_2_3_1/build.gradle
@@ -67,6 +67,12 @@ jlink {
     }
 }
 
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(17))
+    }
+}
+
 jlinkZip {
     group = 'distribution'
 }
