--- a/Task_2_3_1/build.gradle
+++ b/Task_2_3_1/build.gradle
@@ -56,7 +56,12 @@ test {
 }
 
 jacocoTestReport {
-
+    dependsOn test
+    reports {
+        xml.required = true
+        csv.required = false
+        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+    }
 }
 
 jlink {
