--- a/Task_2_3_1/build.gradle
+++ b/Task_2_3_1/build.gradle
@@ -69,7 +69,8 @@ jacocoTestReport {
                     "ru/nsu/fit/oop/veber/presenter/*",
                     "ru/nsu/fit/oop/veber/timer/*",
                     "ru/nsu/fit/oop/veber/renderer/*",
-                    "ru/nsu/fit/oop/veber/dto/*"
+                    "ru/nsu/fit/oop/veber/dto/*",
+                    "ru/nsu/fit/oop/veber/application/*"
             ])
         }))
     }
