--- a/Task_2_4_1/build.gradle
+++ b/Task_2_4_1/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     runtimeOnly 'org.gradle:gradle-tooling-api:7.1'
     runtimeOnly 'org.slf4j:slf4j-simple:1.7.10'
     compileOnly 'org.projectlombok:lombok:1.18.24'
+    implementation 'com.j2html:j2html:1.3.0'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
 }
