--- a/Task_2_4_1/build.gradle
+++ b/Task_2_4_1/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.24'
     implementation 'com.j2html:j2html:1.3.0'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
+    implementation 'com.puppycrawl.tools:checkstyle:10.12.0'
 
 }
 
